HW-3: added /lib; added req examples
